# WIFA

./: .pre-commit-config.yaml  pyproject.toml
.github/scripts/: load_yaml_with_windio.py
.github/workflows/: run_tests.yml
docs/source/: conf.py  cs_equations.rst  foxes.rst  installation.rst  pywake_ellipsys.rst
examples/: validate_data.py
examples/cases/AWAKEN/plant_energy_site/: site.yaml
examples/cases/AWAKEN/plant_energy_turbine/: converter.py
examples/cases/AWAKEN/plant_wind_farm/: awaken_farms.yaml
examples/cases/AWAKEN/wind_energy_system/: analysis.yaml
examples/cases/KUL_LES/observed_output/: simulation_outputs.yaml
examples/cases/KUL_LES/plant_energy_site/: FLOW_UQ_vnv_toy_study_energy_site.yaml
examples/cases/KUL_LES/wind_energy_system/: system.yaml  system_pywake.yaml
examples/cases/heterogeneous_wind_rose_at_turbines/plant_energy_site/: FLOW_toy_study_energy_site.yaml
examples/cases/open_source_scada/plant_energy_resource/: convert_era5.py
examples/cases/windio_4turbines_ABL_stable/plant_energy_site/: FLOW_toy_study_energy_site.yaml
examples/cases/windio_4turbines_multipleTurbines/plant_energy_site/: FLOW_toy_study_energy_site.yaml
examples/post_proc/: build_PCE.py  power_sensitivity_analysis.py
tests/: __init__.py  test_cs.py  test_example_schema.py  test_foxes.py  test_pywake.py  test_wayve.py
wifa/: __init__.py  foxes_api.py  main_api.py  pywake_api.py  wayve_api.py
wifa/cs_api/cs_modules/csLaunch/: cs_launch_modules.py  cs_run_function.py  generate_salome_mesh.py
wifa/cs_api/cs_modules/csMeteo/: write_meteo_file_from_precursor.py
wifa/cs_api/cs_modules/csPostpro/: cs_postprocess_utils.py  write_cs_fields.py  write_cs_turbine_data.py
wifa/cs_api/cs_sources/Farm/DATA/: cs_user_scripts.py  setup.xml
wifa/cs_api/cs_sources/Precursor/DATA/: cs_user_scripts.py  run.cfg  setup.xml
wifa/cs_api/cs_sources/Precursor/SRC/: cs_user_parameters.cpp
