# pyproject.toml file specified at the root of the directory

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wifa"
version = "1.0"
authors = [
  {name = "Julian Quick"},
  {name = "Rem-Sophia Mouradi"},
  {name = "Jonas Schulte"},
  {name = "Koen Devesse"},
  {name = "Paul van der Laan"},
  {name = "Antoine Mathieu"},
]
maintainers = [
  {name = "Julian Quick"},
  {name = "Rem-Sophia Mouradi"},
  {name = "Jonas Schulte"},
  {name = "Koen Devesse"},
  {name = "Antoine Mathieu"},
]
description = "Unified interface to wake and flow models"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wind farm", "Wake modelling"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",#
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.9,<3.12"
dependencies = [
    "py_wake>=2.6.5",
    "foxes @ git+https://github.com/FraunhoferIWES/foxes.git@eu_flow",
    "windIO @ git+https://github.com/EUFlow/windIO.git",
    "wayve @ git+https://gitlab.kuleuven.be/TFSO-software/wayve@dev_foxes",
    #"numpy<2",
    "xarray>=2022.0.0,<2025",
    "mpmath",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pycodestyle",
]
dev = [
    "objsize",
    "jupyter",
    "ncplot",
    "nctoolkit",
    "cartopy",
]

[project.urls]
Homepage = "https://github.com/EUFLOW/WIFA/"
Repository = "https://github.com/EUFLOW/WIFA.git"
"Bug Tracker" = "https://github.com/EUFLOW/WIFA/issues"

[tool.setuptools.packages.find]
exclude = ["notebooks", "examples", "tests", "docs", "recipe", "results", "output"]

[project.scripts]
wifa = "wifa.main_api:run"
wifa_foxes = "wifa.foxes_api:run"
wifa_pywake = "wifa.pywake_api:run"
wifa_wayve = "wifa.wayve_api:run"
wifa_saturne = "wifa.cs_api.cs_modules.csLaunch.cs_run_function:run"
